--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--ICONSCOUT CDN-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release-pro/v4.0.0/css/solid.css">
-     <!--STYLESHEET-->
-    <link rel="stylesheet" href="./style.css">
+    <!--link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
+    /-->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <!--STYLESHEET-->
+    <link rel="stylesheet" href="./style.css" />
     <title>izigo social - connecting the humanity</title>
-</head>
-<body>
-    <h1>IZIGO SOCIAL</h1>
-</body>
+  </head>
+  <body>
+    <nav>
+      <div class="container">
+        <h2 class="log">izigo social</h2>
+        <div class="search-bar">
+          <i class="uil uil-search"></i>
+          <input
+            type="search"
+            placeholder="Search for creators, inspirations and projects"
+          />
+        </div>
+        <div class="create">
+          <label for="create-post">Create</label>
+          <div class="profile-picture">
+            <img src="./images/profile-1.jpg" alt="profile-1" />
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
