--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           />
         </div>
         <div class="create">
-          <label for="create-post">Create</label>
+          <label class="btn btn-primary" for="create-post">Create</label>
           <div class="profile-picture">
             <img src="./images/profile-1.jpg" alt="profile-1" />
           </div>
