add content to left section and add  middle, right sections

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>izigo social - connecting the humanity</title>
   </head>
   <body>
+    <!----------------------------- NAVIGATION BAR ----------------------------->
     <nav>
       <div class="container">
         <h2 class="log">izigo social</h2>
@@ -36,5 +37,118 @@
         </div>
       </div>
     </nav>
+
+    <!---------------------------------- MAIN ---------------------------------->
+    <main>
+      <div class="container">
+        <!--================================ LEFT =================================-->
+
+        <div class="left">
+          <!-------- PROFILE -------->
+          <a class="profile">
+            <div class="profile-picture">
+              <img src="./images/profile-1.jpg" alt="profile-1" />
+            </div>
+            <div class="handle">
+              <h4>Diana Ayi</h4>
+              <p class="text-muted">@dayi</p>
+            </div>
+          </a>
+          <!-------- END OF PROFILE -------->
+
+          <!-------- SIDEBAR -------->
+          <div class="sidebar">
+            <a class="menu-item">
+              <span><i class="uil uil-home active"></i></span>
+              <h3>Home</h3>
+            </a>
+            <a class="menu-item">
+              <span><i class="uil uil-compass"></i></span>
+              <h3>Explore</h3>
+            </a>
+            <a class="menu-item" id="notifications">
+              <span><i class="uil uil-bell"><small class="notification-count">+9</small></i></span>
+              <h3>Notifications</h3>
+              <!-- NOTIFICATION POPUP -->
+              <div class="notification-popup">
+                <div>
+                  <div class="profile-picture">
+                    <img src="./images/profile-2.jpg" alt="profile-2" />
+                  </div>
+                  <div class="notification-body">
+                    <b>Keke Benjamin</b> accepted your friend request
+                    <small class="text-muted">2 DAYS AGO</small>
+                  </div>
+                </div>
+                <div>
+                  <div class="profile-picture">
+                    <img src="./images/profile-3.jpg" alt="profile-3" />
+                  </div>
+                  <div class="notification-body">
+                    <b
+                      >Diego <i class="fa fa-level-up" aria-hidden="true"></i
+                    ></b>
+                    accepted your friend request
+                    <small class="text-muted">2 DAYS AGO</small>
+                  </div>
+                </div>
+              </div>
+              <!-- END OF NOTIFICATION POPUP -->
+            </a>
+            <a class="menu-item">
+              <span><i class="uil uil-envelope-alt"><small class="notification-count">6</small></i></span>
+              <h3>Message</h3>
+            </a>
+            <a class="menu-item" id="messages-notifications">
+              <span><i class="uil uil-bookmark"></i></span>
+              <h3>Bookmarks</h3>
+            </a>
+            <a class="menu-item">
+              <span><i class="uil uil-chart-line"></i></span>
+              <h3>Analytics</h3>
+            </a>
+            <a class="menu-item">
+              <span><i class="uil uil-palette"></i></span>
+              <h3>Theme</h3>
+            </a>
+            <a class="menu-item">
+              <span><i class="uil uil-setting"></i></span>
+              <h3>Settings</h3>
+            </a>
+          </div>
+          <!-------- END OF SIDEBAR -------->
+
+          <!-------- CREATE POST -------->
+          <label class="btn btn-primary" for="create-post">Create post</label>
+          <!---- END OF CREATE POST ----->
+        </div>
+
+        <!--================================ MIDDLE ===============================-->
+        <div class="middle">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+          et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
+
+        <!--================================ RIGHT ================================-->
+        <div class="right">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+          et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+    </main>
   </body>
 </html>
