--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!---------------------------------- MAIN ---------------------------------->
     <main>
       <div class="container">
-        
+
         <!--================================ LEFT =================================-->
         <div class="left">
           <!-------- PROFILE -------->
@@ -58,8 +58,8 @@
 
           <!-------- SIDEBAR -------->
           <div class="sidebar">
-            <a class="menu-item">
-              <span><i class="uil uil-home active"></i></span>
+            <a class="menu-item active">
+              <span><i class="uil uil-home"></i></span>
               <h3>Home</h3>
             </a>
             <a class="menu-item">
@@ -67,7 +67,7 @@
               <h3>Explore</h3>
             </a>
             <a class="menu-item" id="notifications">
-              <span><i class="uil uil-bell"><small class="notification-count">+9</small></i></span>
+              <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
               <h3>Notifications</h3>
               <!-- NOTIFICATION POPUP -->
               <div class="notification-popup">
