style notification popup

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     <!---------------------------------- MAIN ---------------------------------->
     <main>
       <div class="container">
-
         <!--================================ LEFT =================================-->
         <div class="left">
           <!-------- PROFILE -------->
@@ -67,7 +66,11 @@
               <h3>Explore</h3>
             </a>
             <a class="menu-item" id="notifications">
-              <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
+              <span
+                ><i class="uil uil-bell"
+                  ><small class="notification-count">9+</small></i
+                ></span
+              >
               <h3>Notifications</h3>
               <!-- NOTIFICATION POPUP -->
               <div class="notification-popup">
@@ -85,10 +88,7 @@
                     <img src="./images/profile-3.jpg" alt="profile-3" />
                   </div>
                   <div class="notification-body">
-                    <b
-                      >Diego <i class="fa fa-level-up" aria-hidden="true"></i
-                    ></b>
-                    accepted your friend request
+                    <b>Diego</b> accepted your friend request
                     <small class="text-muted">2 DAYS AGO</small>
                   </div>
                 </div>
@@ -96,7 +96,11 @@
               <!-- END OF NOTIFICATION POPUP -->
             </a>
             <a class="menu-item">
-              <span><i class="uil uil-envelope-alt"><small class="notification-count">6</small></i></span>
+              <span
+                ><i class="uil uil-envelope-alt"
+                  ><small class="notification-count">6</small></i
+                ></span
+              >
               <h3>Message</h3>
             </a>
             <a class="menu-item" id="messages-notifications">
