add stories content in the middle section

--- a/index.html
+++ b/index.html
@@ -126,19 +126,47 @@
           <label class="btn btn-primary" for="create-post">Create post</label>
           <!---- END OF CREATE POST ----->
         </div>
+        <!--============================= END OF LEFT =============================-->
 
         <!--================================ MIDDLE ===============================-->
         <div class="middle">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-          et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-          takimata sanctus est Lorem ipsum dolor sit amet.
+          <!--------------------- STORIES ------------------------>
+          <div class="stories">
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./images/profile-8.jpg" alt="profile-8" />
+                <p class="name">Your Story</p>
+              </div>
+            </div>
+            <div class="story">
+                <div class="profile-picture">
+                  <img src="./images/profile-9.jpg" alt="profile-9" />
+                  <p class="name">Audrey Nanie</p>
+                </div>
+              </div>
+              <div class="story">
+                <div class="profile-picture">
+                  <img src="./images/profile-10.jpg" alt="profile-10" />
+                  <p class="name">Winnie Hale</p>
+                </div>
+              </div>
+              <div class="story">
+                <div class="profile-picture">
+                  <img src="./images/profile-11.jpg" alt="profile-11" />
+                  <p class="name">Denzel Claude</p>
+                </div>
+              </div>
+          </div>
+          <!------------------ END OF STORIES -------------------->
+          <form class="create-post">
+            <div class="profile-picture">
+                <img src="./images/profile-1.jpg" alt="profile-1">
+            </div>
+            <input type="text" placeholder="What's on your mind Diana?" id="create-post">
+            <input type="submit" value="Post" class="btn btn-primary">
+          </form>
         </div>
+        <!--============================= END OF MIDDLE ===========================-->
 
         <!--================================ RIGHT ================================-->
         <div class="right">
@@ -152,6 +180,7 @@
           et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
           takimata sanctus est Lorem ipsum dolor sit amet.
         </div>
+        <!--============================= END OF RIGHT ============================-->
       </div>
     </main>
   </body>
