add style for stories and story items

--- a/index.html
+++ b/index.html
@@ -135,35 +135,51 @@
             <div class="story">
               <div class="profile-picture">
                 <img src="./images/profile-8.jpg" alt="profile-8" />
-                <p class="name">Your Story</p>
               </div>
+              <p class="name">Your Story</p>
             </div>
             <div class="story">
-                <div class="profile-picture">
-                  <img src="./images/profile-9.jpg" alt="profile-9" />
-                  <p class="name">Audrey Nanie</p>
-                </div>
+              <div class="profile-picture">
+                <img src="./images/profile-9.jpg" alt="profile-9" />
               </div>
-              <div class="story">
-                <div class="profile-picture">
-                  <img src="./images/profile-10.jpg" alt="profile-10" />
-                  <p class="name">Winnie Hale</p>
-                </div>
+              <p class="name">Audrey Nanie</p>
+            </div>
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./images/profile-10.jpg" alt="profile-10" />
               </div>
-              <div class="story">
-                <div class="profile-picture">
-                  <img src="./images/profile-11.jpg" alt="profile-11" />
-                  <p class="name">Denzel Claude</p>
-                </div>
+              <p class="name">Winnie Hale</p>
+            </div>
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./images/profile-11.jpg" alt="profile-11" />
               </div>
+              <p class="name">Denzel Claude</p>
+            </div>
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./images/profile-12.jpg" alt="profile-12" />
+              </div>
+              <p class="name">Diego Lee</p>
+            </div>
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./images/profile-13.jpg" alt="profile-13" />
+              </div>
+              <p class="name">Mac Jugal</p>
+            </div>
           </div>
           <!------------------ END OF STORIES -------------------->
           <form class="create-post">
             <div class="profile-picture">
-                <img src="./images/profile-1.jpg" alt="profile-1">
+              <img src="./images/profile-1.jpg" alt="profile-1" />
             </div>
-            <input type="text" placeholder="What's on your mind Diana?" id="create-post">
-            <input type="submit" value="Post" class="btn btn-primary">
+            <input
+              type="text"
+              placeholder="What's on your mind Diana?"
+              id="create-post"
+            />
+            <input type="submit" value="Post" class="btn btn-primary" />
           </form>
         </div>
         <!--============================= END OF MIDDLE ===========================-->
