--- a/index.html
+++ b/index.html
@@ -181,6 +181,62 @@
             />
             <input type="submit" value="Post" class="btn btn-primary" />
           </form>
+
+          <!------------------ FEEDS -------------------->
+          <div class="feeds">
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./images/profile-13.jpg" alt="profile-13" />
+                  </div>
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Quatar, 15 minutes ago</small>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="picture">
+                <img src="./images/feed-1.jpg" alt="feed-1" />
+              </div>
+
+              <div class="action-button">
+                <div class="interaction-buttons">
+                  <span><i class="uil uil-heart"></i></span>
+                  <span><i class="uil uil-comment-dots"></i></span>
+                  <span><i class="uil uil-share-alt"></i></span>
+                </div>
+                <div class="bookmark">
+                  <span><i class="uil uil-bookmark"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./images/profile-10.jpg" alt="profile-10"
+                /></span>
+                <span
+                  ><img src="./images/profile-11.jpg" alt="profile-11"
+                /></span>
+                <span
+                  ><img src="./images/profile-12.jpg" alt="profile-12"
+                /></span>
+                <p>Liked by <b>Ernest Achiever</b> and <b>2.323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+          </div>
+          <!--------------- END OF FEEDS ---------------->
         </div>
         <!--============================= END OF MIDDLE ===========================-->
 
