add style to feeds

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 
           <!------------------ FEEDS -------------------->
           <div class="feeds">
+            <!--FEED 1-->
             <div class="feed">
               <div class="head">
                 <div class="user">
@@ -194,16 +195,16 @@
                     <h3>Lana Rose</h3>
                     <small>Quatar, 15 minutes ago</small>
                   </div>
-                  <div class="edit">
-                    <i class="uil uil-ellipsis-h"></i>
-                  </div>
+                </div>
+                <div class="edit">
+                  <i class="uil uil-ellipsis-h"></i>
                 </div>
               </div>
               <div class="picture">
                 <img src="./images/feed-1.jpg" alt="feed-1" />
               </div>
 
-              <div class="action-button">
+              <div class="action-buttons">
                 <div class="interaction-buttons">
                   <span><i class="uil uil-heart"></i></span>
                   <span><i class="uil uil-comment-dots"></i></span>
@@ -235,6 +236,318 @@
               </div>
               <div class="comments text-muted">View all 277 comments</div>
             </div>
+            <!--FEED 2-->
+            <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-12.jpg" alt="profile-12" />
+                    </div>
+                    <div class="info">
+                      <h3>Diego Lee</h3>
+                      <small>Dubai, 35 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-2.jpg" alt="feed-2" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Laura Pausini</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Diego Lee</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
+              <!--FEED 3-->
+              <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-15.jpg" alt="profile-15" />
+                    </div>
+                    <div class="info">
+                      <h3>Audrey Nanie</h3>
+                      <small>Calw, 10 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-3.jpg" alt="feed-3" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Bobo Janvier</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Audrey Nanie</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
+              <!--FEED 4-->
+              <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-16.jpg" alt="profile-16" />
+                    </div>
+                    <div class="info">
+                      <h3>Denzel Claude</h3>
+                      <small>Boeblingen, 45 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-4.jpg" alt="feed-4" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Bruno Tagne</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Denzel Claude</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
+              <!--FEED 5-->
+              <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-17.jpg" alt="profile-17" />
+                    </div>
+                    <div class="info">
+                      <h3>Mac Jugal</h3>
+                      <small>Paris, 1 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-5.jpg" alt="feed-5" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Ngole Ngole</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Mac Jugal</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
+              <!--FEED 6-->
+              <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-18.jpg" alt="profile-18" />
+                    </div>
+                    <div class="info">
+                      <h3>Romeo Kamroy</h3>
+                      <small>Paris, 20 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-6.jpg" alt="feed-6" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Clemence Kame</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Romeo Kamroy</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
+              <!--FEED 7-->
+              <div class="feed">
+                <div class="head">
+                  <div class="user">
+                    <div class="profile-picture">
+                      <img src="./images/profile-19.jpg" alt="profile-19" />
+                    </div>
+                    <div class="info">
+                      <h3>Le Discernement</h3>
+                      <small>Amstedam, 33 minutes ago</small>
+                    </div>
+                  </div>
+                  <div class="edit">
+                    <i class="uil uil-ellipsis-h"></i>
+                  </div>
+                </div>
+                <div class="picture">
+                  <img src="./images/feed-7.jpg" alt="feed-7" />
+                </div>
+  
+                <div class="action-buttons">
+                  <div class="interaction-buttons">
+                    <span><i class="uil uil-heart"></i></span>
+                    <span><i class="uil uil-comment-dots"></i></span>
+                    <span><i class="uil uil-share-alt"></i></span>
+                  </div>
+                  <div class="bookmark">
+                    <span><i class="uil uil-bookmark"></i></span>
+                  </div>
+                </div>
+  
+                <div class="liked-by">
+                  <span
+                    ><img src="./images/profile-10.jpg" alt="profile-10"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-11.jpg" alt="profile-11"
+                  /></span>
+                  <span
+                    ><img src="./images/profile-12.jpg" alt="profile-12"
+                  /></span>
+                  <p>Liked by <b>Diego Lee</b> and <b>2.323 others</b></p>
+                </div>
+  
+                <div class="caption">
+                  <p>
+                    <b>Le Discernement</b> Lorem ipsum dolor sit quisquam eius.
+                    <span class="hash-tag">#lifestyle</span>
+                  </p>
+                </div>
+                <div class="comments text-muted">View all 277 comments</div>
+              </div>
           </div>
           <!--------------- END OF FEEDS ---------------->
         </div>
