add style to messages and active users

--- a/index.html
+++ b/index.html
@@ -588,6 +588,35 @@
                 <p class="text-muted">Just woke up bruh</p>
               </div>
             </div>
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./images/profile-18.jpg" alt="profile-18" />
+                <div class="active"></div>
+              </div>
+              <div class="message-body">
+                <h5>Diego Lee</h5>
+                <p class="text-muted">Let's goooo</p>
+              </div>
+            </div>
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./images/profile-19.jpg" alt="profile-19" />
+              </div>
+              <div class="message-body">
+                <h5>Le Discernement</h5>
+                <p class="text-muted">L'abstraction est la clef!</p>
+              </div>
+            </div>
+            <div class="message">
+                <div class="profile-picture">
+                  <img src="./images/profile-20.jpg" alt="profile-20" />
+                  <div class="active"></div>
+                </div>
+                <div class="message-body">
+                  <h5>Denzel</h5>
+                  <p class="text-muted">Docteur Pro!</p>
+                </div>
+              </div>
           </div>
           <!---------------- END OF MESSAGES ------------------->
 
