--- a/index.html
+++ b/index.html
@@ -608,15 +608,15 @@
               </div>
             </div>
             <div class="message">
-                <div class="profile-picture">
-                  <img src="./images/profile-20.jpg" alt="profile-20" />
-                  <div class="active"></div>
-                </div>
-                <div class="message-body">
-                  <h5>Denzel</h5>
-                  <p class="text-muted">Docteur Pro!</p>
-                </div>
+              <div class="profile-picture">
+                <img src="./images/profile-20.jpg" alt="profile-20" />
+                <div class="active"></div>
               </div>
+              <div class="message-body">
+                <h5>Denzel</h5>
+                <p class="text-muted">Docteur Pro!</p>
+              </div>
+            </div>
           </div>
           <!---------------- END OF MESSAGES ------------------->
 
@@ -624,24 +624,50 @@
           <div class="friend-requests">
             <h4>Requests</h4>
             <div class="request">
-                <div class="info">
-                    <div class="profile-picture">
-                        <img src="./images/profile-13.jpg" alt="profile-13">
-                    </div>
-                    <div>
-                        <h5>Hajia Bintu</h5>
-                        <p class="text-muted">8 mutual friends</p>
-                    </div>
-                    <div class="action">
-                        <button class="btn btn-primary">
-                            Accept
-                        </button>
-                        <button class="btn">
-                            Decline
-                        </button>
-                    </div>
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./images/profile-7.jpg" alt="profile-7" />
                 </div>
+                <div>
+                  <h5>Hajia Bintu</h5>
+                  <p class="text-muted">8 mutual friends</p>
+                </div>
+              </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
             </div>
+            <div class="request">
+                <div class="info">
+                  <div class="profile-picture">
+                    <img src="./images/profile-8.jpg" alt="profile-8" />
+                  </div>
+                  <div>
+                    <h5>Audrey Nanie</h5>
+                    <p class="text-muted">2 mutual friends</p>
+                  </div>
+                </div>
+                <div class="action">
+                  <button class="btn btn-primary">Accept</button>
+                  <button class="btn">Decline</button>
+                </div>
+              </div>
+              <div class="request">
+                <div class="info">
+                  <div class="profile-picture">
+                    <img src="./images/profile-9.jpg" alt="profile-9" />
+                  </div>
+                  <div>
+                    <h5>Mac Jugal</h5>
+                    <p class="text-muted">18 mutual friends</p>
+                  </div>
+                </div>
+                <div class="action">
+                  <button class="btn btn-primary">Accept</button>
+                  <button class="btn">Decline</button>
+                </div>
+              </div>
           </div>
           <!---------------- END OFFRIENDS REQUESTS ------------->
         </div>
