--- a/index.html
+++ b/index.html
@@ -639,40 +639,97 @@
               </div>
             </div>
             <div class="request">
-                <div class="info">
-                  <div class="profile-picture">
-                    <img src="./images/profile-8.jpg" alt="profile-8" />
-                  </div>
-                  <div>
-                    <h5>Audrey Nanie</h5>
-                    <p class="text-muted">2 mutual friends</p>
-                  </div>
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./images/profile-8.jpg" alt="profile-8" />
                 </div>
-                <div class="action">
-                  <button class="btn btn-primary">Accept</button>
-                  <button class="btn">Decline</button>
+                <div>
+                  <h5>Audrey Nanie</h5>
+                  <p class="text-muted">2 mutual friends</p>
                 </div>
               </div>
-              <div class="request">
-                <div class="info">
-                  <div class="profile-picture">
-                    <img src="./images/profile-9.jpg" alt="profile-9" />
-                  </div>
-                  <div>
-                    <h5>Mac Jugal</h5>
-                    <p class="text-muted">18 mutual friends</p>
-                  </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
+            <div class="request">
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./images/profile-9.jpg" alt="profile-9" />
                 </div>
-                <div class="action">
-                  <button class="btn btn-primary">Accept</button>
-                  <button class="btn">Decline</button>
+                <div>
+                  <h5>Mac Jugal</h5>
+                  <p class="text-muted">18 mutual friends</p>
                 </div>
               </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
           </div>
           <!---------------- END OFFRIENDS REQUESTS ------------->
         </div>
         <!--============================= END OF RIGHT ============================-->
       </div>
     </main>
+
+    <!--============================= THEME CUSTOMIZATION  ============================-->
+
+    <!--========================== END OF THEME CUSTOMIZATION  ========================-->
+    <div class="customize-theme">
+      <div class="card">
+        <h2>Customize your view</h2>
+        <p>Manage your font size, color, and background.</p>
+
+        <!---------------- FONT SIZES ------------->
+        <div class="font-size">
+          <h4>Font Size</h4>
+          <div>
+            <h6>Aa</h6>
+            <div class="choose-size">
+              <span class="font-size-1"></span>
+              <span class="font-size-2"></span>
+              <span class="font-size-3"></span>
+              <span class="font-size-4"></span>
+              <span class="font-size-5"></span>
+            </div>
+            <h3>Aa</h3>
+          </div>
+        </div>
+
+        <!---------------- PRIMARY COLORS ------------->
+        <div class="color">
+          <h4>Color</h4>
+          <div class="choose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+          </div>
+        </div>
+
+        <!---------------- BACKGROUND COLORS ------------->
+        <div class="background">
+          <h4>Background</h4>
+          <div class="choose-bg">
+            <div class="bg-1">
+              <span></span>
+              <h5 for="bg-1">Light</h5>
+            </div>
+            <div class="bg-2">
+              <span></span>
+              <h5>Dim</h5>
+            </div>
+            <div class="bg-3">
+              <span></span>
+              <h5 for="bg-3">Lights Out</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
