--- a/index.html
+++ b/index.html
@@ -676,12 +676,10 @@
     </main>
 
     <!--============================= THEME CUSTOMIZATION  ============================-->
-
-    <!--========================== END OF THEME CUSTOMIZATION  ========================-->
     <div class="customize-theme">
       <div class="card">
         <h2>Customize your view</h2>
-        <p>Manage your font size, color, and background.</p>
+        <p class="text-muted">Manage your font size, color, and background.</p>
 
         <!---------------- FONT SIZES ------------->
         <div class="font-size">
@@ -690,7 +688,7 @@
             <h6>Aa</h6>
             <div class="choose-size">
               <span class="font-size-1"></span>
-              <span class="font-size-2"></span>
+              <span class="font-size-2 active"></span>
               <span class="font-size-3"></span>
               <span class="font-size-4"></span>
               <span class="font-size-5"></span>
@@ -731,5 +729,6 @@
         </div>
       </div>
     </div>
+     <!--========================== END OF THEME CUSTOMIZATION  ========================-->
   </body>
 </html>
