add javascript for active menu item and notification popup

--- a/index.html
+++ b/index.html
@@ -730,5 +730,7 @@
       </div>
     </div>
      <!--========================== END OF THEME CUSTOMIZATION  ========================-->
-  </body>
+  
+     <script src="./index.js"></script>
+    </body>
 </html>
