add javascript for notification menu item

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
               </div>
               <!-- END OF NOTIFICATION POPUP -->
             </a>
-            <a class="menu-item">
-              <span
-                ><i class="uil uil-envelope-alt"
-                  ><small class="notification-count">6</small></i
-                ></span
-              >
+            <a class="menu-item" id="messages-notifications">
+                <span>
+                    <i class="uil uil-envelope-alt">
+                        <small class="notification-count">6</small>
+                    </i>
+                </span>
               <h3>Message</h3>
             </a>
-            <a class="menu-item" id="messages-notifications">
+            <a class="menu-item">
               <span><i class="uil uil-bookmark"></i></span>
               <h3>Bookmarks</h3>
             </a>
@@ -729,8 +729,8 @@
         </div>
       </div>
     </div>
-     <!--========================== END OF THEME CUSTOMIZATION  ========================-->
-  
-     <script src="./index.js"></script>
-    </body>
+    <!--========================== END OF THEME CUSTOMIZATION  ========================-->
+
+    <script src="./index.js"></script>
+  </body>
 </html>
